--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "final-form": "^4.20.7",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.0.0",
     "react": "^18.1.0",
     "react-admin": "^4.0.1",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-final-form": "^6.5.9",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
