--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-final-form": "^6.5.9",
     "react-responsive": "^9.0.0-beta.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
